# photo-pick

./: .gitignore  README.md
.claude/: settings.local.json
backend/: pyproject.toml  requirements.txt  start.bat
backend/app/: config.py  main.py
backend/app/analysis/: blur_detector.py  exposure_analyzer.py  eye_detector.py
backend/app/api/: ai_settings.py  analysis.py  export.py  filesystem.py  groups.py  marks.py  organizer.py  photos.py  sessions.py  tags.py  ws.py
backend/app/models/: __init__.py  database.py
backend/app/schemas/: __init__.py
backend/app/services/: ai_provider.py  content_grouping_service.py  content_tag_service.py  grouping_service.py  import_service.py  similarity_service.py  thumbnail_service.py  ws_manager.py
frontend/: index.html  package-lock.json  package.json  start.bat  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: aiSettings.ts  export.ts  filesystem.ts  groups.ts  index.ts  organizer.ts  photos.ts  sessions.ts  tags.ts  websocket.ts
frontend/src/components/common/: FolderPicker.vue
frontend/src/components/compare/: CompareView.vue  PKCompareView.vue
frontend/src/components/export/: ExportDialog.vue
frontend/src/components/grid/: GroupHeader.vue  PhotoGrid.vue  (+1 more)
frontend/src/composables/: useKeyboard.ts
frontend/src/router/: index.ts
frontend/src/stores/: groups.ts  photos.ts  tags.ts  ui.ts
frontend/src/styles/: base.css
frontend/src/types/: photo.ts
frontend/src/views/: BrowseView.vue  HomeView.vue  OrganizeView.vue
scripts/: dev.bat  stop.bat
(+5 files in other folders)
