[project]
name = "photo-pick-backend"
version = "0.1.0"
description = "Professional photo culling tool - backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "Pillow>=10.4.0",
    "exifread>=3.0.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "imagehash>=4.3.1",
]

[project.optional-dependencies]
raw = ["rawpy>=0.21.0"]
cloud = ["anthropic>=0.30.0", "httpx>=0.27.0"]
analysis = ["onnxruntime>=1.18.0"]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
